--- a/WoTu/wotu/src/App.css
+++ b/WoTu/wotu/src/App.css
@@ -1,22 +1,115 @@
-.App {
-  text-align: center;
+body {
+  font-size: 24px;
 }
 
-.App-logo {
-  height: 40vmin;
+html,
+body,
+div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  padding: 0;
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ul, li, ol {
+  list-style: none;
+}
+
+img {
+  display: block;
+}
+
+.nav {
+  width: 100%;
+  height: 1.04rem;
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  border-top: 1px solid #ddd;
 }
 
-.App-link {
-  color: #09d3ac;
+.nav .icon {
+  width: .666667rem;
+  height: .666667rem;
+}
+.ant-menu {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+.ant-menu-horizontal{
+  border-top: 1px solid red;
+}
+.ant-menu-item {
+  width: 25%;
+  text-align: center;
+  /* height: 0.57rem; */
 }
