--- a/WoTu/wotu/src/App.css
+++ b/WoTu/wotu/src/App.css
@@ -20,3 +20,13 @@
 .App-link {
   color: #09d3ac;
 }
+.ant-menu {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+.ant-menu-item {
+  width: 25%;
+}
