--- a/WoTu/wotu/src/App.css
+++ b/WoTu/wotu/src/App.css
@@ -1,5 +1,8 @@
 body {
-  font-size: 100px;
+  font-size: 24px;
+}
+body,html{
+  height: 100%;
 }
 
 html,
@@ -84,13 +87,16 @@ img {
 }
 
 .ant-menu {
-  position: absolute;
+  display: flex;
+  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 1rem;
+  text-align: center;
+  align-items: center;
 }
 
 .ant-menu-item {
   width: 25%;
-  text-align: center;
 }
