--- a/WoTu/wotu/src/css/list.css
+++ b/WoTu/wotu/src/css/list.css
@@ -9,9 +9,43 @@
     margin: 0 auto;
     line-height: 1rem;
     text-align: center;
+    z-index: 999;
+    /* height:5rem; */
 }
-/* .Search{
-    width: 80%;
-    margin: 0 auto;
-    color: red;
-} */
+.nav-left{
+    background: #F7F7F7;
+    padding: 0.05rem 0.05rem;
+    width: 2.1rem;
+    height:1.04rem;
+    margin:0.1rem 0;
+    line-height: 1rem;
+    text-align: center;
+    text-overflow:ellipsis;
+    display:-webkit-box;
+    -webkit-box-orient:vertical;
+    -webkit-line-clamp:1;
+    overflow:hidden
+}
+.nav-left:hover{
+    background: #fff;
+    border-left:0.08rem solid #0ec5a1;
+    color: #0ec5a1;
+}
+.Title{
+    width: 5rem;
+    height: 0.8rem;
+    background: #0EC5A1;
+    position: relative;
+    top: 1.1rem;
+    /* left: 2.3rem; */
+    left: 30%;
+    line-height: 0.8rem;
+    border-radius: 0.2rem;
+}
+.Title h4{
+    text-align: center;
+    color: #fff;
+}
+.divider{
+    border: 0.5rem;
+}
