--- a/WoTu/wotu/src/App.css
+++ b/WoTu/wotu/src/App.css
@@ -1,5 +1,5 @@
 body {
-  font-size: 24px;
+  font-size: 100px;
 }
 body,html{
   height: 100%;
@@ -92,11 +92,13 @@ img {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 1rem;
   text-align: center;
-  align-items: center;
+  /* justify-content: center; */
+  /* align-items: center; */
 }
-
+.ant-menu-item{
+  height: 1rem;
+}
 .ant-menu-item {
   width: 25%;
 }
