--- a/WoTu/wotu/src/css/home.css
+++ b/WoTu/wotu/src/css/home.css
@@ -7,6 +7,7 @@ img {
 
 .home_box {
     width: 100%;
+    margin-bottom: 1rem;
 }
 
 .header {
@@ -201,6 +202,11 @@ a {
 
 /* 首页分类 */
 
+.lei {
+    width: 100%;
+    height: 100%;
+}
+
 .special-subject {
     background-color: #fff;
     margin-bottom: 0.15rem;
@@ -222,4 +228,27 @@ a {
 .special-subject .title-box span {
     line-height: 0.88rem;
     height: 0.28rem;
+}
+
+
+/* 分类下面的卡片 */
+
+.cart_c {
+    width: 100%;
+    height: 5.15rem;
+}
+
+.ant-card-cover img {
+    width: 3.46rem;
+    height: 3.46rem;
+}
+
+
+/* 更多 */
+
+.more-work {
+    width: 100%;
+    text-align: center;
+    height: 0.4rem;
+    line-height: 0.4rem;
 }
