--- a/WoTu/wotu/src/css/home.css
+++ b/WoTu/wotu/src/css/home.css
@@ -235,11 +235,12 @@ a {
 
 .cart_c {
     width: 100%;
-    height: 5.15rem;
+    height: 4.7rem;
+    /* background-color: aqua; */
 }
 
 .ant-card-cover img {
-    width: 3.46rem;
+    width: 100%;
     height: 3.46rem;
 }
 
