--- a/WoTu/wotu/src/css/mycenter.css
+++ b/WoTu/wotu/src/css/mycenter.css
@@ -54,6 +54,7 @@ section {
     position: relative;
     background: #f6f6f6;
     padding-bottom: 6.5rem;
+    margin-top: -0.32rem;
 }
 
 .Span {
@@ -65,6 +66,8 @@ section {
     height: 10.2rem;
     background: #f6f6f6;
     padding: 0.2rem;
+    margin-top: -0.32rem;
+
 }
 
 .verification-wrap {
