--- a/WoTu/wotu/src/css/mine.css
+++ b/WoTu/wotu/src/css/mine.css
@@ -16,11 +16,10 @@
     justify-content: space-between;
     align-items: center;
     padding:0 .4rem;
-    
 }
 .ID p{
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     color: #fff;
     font-size: 0.32rem;
     line-height: .1rem;
