分类页等多个页面完善

--- a/WoTu/wotu/src/css/home.css
+++ b/WoTu/wotu/src/css/home.css
@@ -244,6 +244,18 @@ a {
     height: 3.46rem;
 }
 
+.ant-card-meta-title {
+    height: 1.3rem;
+    padding-top: 0.3rem;
+    overflow: hidden;
+    color: rgba(0, 0, 0, 0.85);
+    font-weight: 500;
+    font-size: 20px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    /* background: red; */
+}
+
 
 /* 更多 */
 
