--- a/WoTu/wotu/src/css/SettingWall.css
+++ b/WoTu/wotu/src/css/SettingWall.css
@@ -1,6 +1,6 @@
 .set-div {
     width: 100%;
-    height: 600px;
+    height: 27.5rem;
     background: #f6f6f6;
 }
 
@@ -31,91 +31,127 @@
     border: #fff 0.01rem solid;
     font-size: 0.3rem;
 }
-.set-unload{
-    width:7rem;
-    height:1.9rem;
+
+.set-unload {
+    width: 7rem;
+    height: 1.9rem;
     background: #ffffff;
     margin: 0.3rem auto 0;
     border-radius: 0.1rem;
     position: relative;
 }
-.set-unload .anticon:nth-of-type(1){
+
+.set-unload .anticon:nth-of-type(1) {
     color: #0cc59e;
     font-size: 1rem;
-    margin:0.4rem 0.35rem 0;
+    margin: 0.4rem 0.35rem 0;
     position: absolute;
-    left:0.05rem;
-    top:0.1rem;
+    left: 0.05rem;
+    top: 0.1rem;
 }
-.set-p2{
+
+.set-p2 {
     position: absolute;
     top: 23%;
-    right:28%;
+    right: 28%;
 }
-.set-p2 p:nth-of-type(1){
+
+.set-p2 p:nth-of-type(1) {
     font-size: 0.3rem;
     color: #777;
     text-align: left;
 }
-.set-p2 p:nth-of-type(2){
+
+.set-p2 p:nth-of-type(2) {
     font-size: 0.24rem;
     color: #999;
 }
-.set-unload .anticon:nth-of-type(2){
+
+.set-unload .anticon:nth-of-type(2) {
     color: #bcbcbc;
     font-size: 0.5rem;
-    margin:0.4rem 0.35rem 0;
+    margin: 0.4rem 0.35rem 0;
     position: absolute;
-    right:10%;
+    right: 10%;
     top: 20%;
 }
-.set-clear{
-    width:100%;
-    height:1.3rem;
+
+.set-clear {
+    width: 100%;
+    height: 1.3rem;
 }
-.set-main-one{
-    width:95%;
+
+.set-main-one {
+    width: 100%;
+    height: 5.5rem;
     margin: auto;
+    padding: 0 0.3rem 0 0.3rem;
 }
-.set-main-top-text{
-    height:0.4rem;
+
+.set-main-top-text {
+    height: 0.4rem;
     line-height: 0.4rem;
     margin-bottom: 0.1rem;
+    display: flex;
+    padding: 0 0.1rem;
+    justify-content: space-between;
 }
-.set-main-top-text span:nth-of-type(1){
-    margin-right: 4.4rem;
+
+.set-main-top-text span:nth-of-type(1) {
+    /* margin-right: 4.2rem; */
     font-size: 0.3rem;
     color: #2d2d2d;
 }
-.set-main-top-text span:nth-of-type(2){
+
+.set-main-top-text span:nth-of-type(2) {
     color: #0cc59e;
 }
 
-.set-main-top-img{
-    width:100%;
-}
-.set-main-top-img-one,.set-main-top-img-two{
-    width:3.34rem;
-    height:5.55rem;
-    float: left;
-    background:white;
-    padding:0.1rem 0 0 0.11rem;
-}
-.set-main-top-img-one{
-    margin-right: 0.4rem;
-}
-.set-main-top-img-one img,.set-main-top-img-two img{
-    width:3.1rem;
-    height:4.8rem;
-}
-.set-main-top-img-one p,.set-main-top-img-two p{
-    font-size: 0.28rem;
-    line-height: 0.7rem;
+.set-main-top-img {
+    width: 100%;
+    height: 100%;
+    /* background: red; */
 }
 
- .set-unload .ant-upload.ant-upload-select-picture-card{
+.set-main-top-img-one,
+.set-main-top-img-one1,
+.set-main-top-img-two {
+    width: 3.34rem;
+    height: 4.55rem;
+    float: left;
+    background: white;
+    padding: 0.1rem 0 0 0.11rem;
+}
+
+.set-main-top-img-one,
+.set-main-top-img-one1 {
+    margin-left: 0.1rem;
+    margin-bottom: 0.2rem;
+}
+
+.set-main-top-img-one img,
+.set-main-top-img-one1 img,
+.set-main-top-img-two img {
+    width: 3.1rem;
+    height: 3.8rem;
+}
+
+.set-main-top-img-one p,
+.set-main-top-img-one1 p,
+.set-main-top-img-two p {
+    width: 96%;
+    height: 0.8rem;
+    font-size: 0.28rem;
+    line-height: 0.7rem;
+    /* background: red; */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.set-unload .ant-upload.ant-upload-select-picture-card {
     width: 7rem;
     height: 1.9rem;
     background: white;
-    border:none;
-  }
+    border: none;
+}
