--- a/WoTu/wotu/src/css/list.css
+++ b/WoTu/wotu/src/css/list.css
@@ -3,7 +3,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 1rem;
+    height: 7.5%;
     background: #0EC5A1;
     margin: 0 auto;
     line-height: 1rem;
@@ -38,7 +38,6 @@
     background: #0EC5A1;
     position: relative;
     top: 1.1rem;
-    /* left: 2.3rem; */
     left: 30%;
     line-height: 0.8rem;
     border-radius: 0.2rem;
@@ -64,7 +63,6 @@
 .cart_c1 {
     width: 100%;
     height: 2rem;
-    /* background-color: aqua; */
 }
 
 .ant-card-cover img {
@@ -77,7 +75,58 @@
 }
 
 .ant-card-meta-title {
+    text-align: center;
+    width: 1.4rem;
+    height: 1rem;
+    /* background: red; */
     font-size: 0.26rem !important;
     margin-top: 0.1rem;
+    white-space: nowrap;
     overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+
+/* iii */
+
+.ant-tabs .ant-tabs-left-bar {
+    background: #f6f6f6;
+}
+
+.list_tab {
+    width: 100%;
+    height: 9.25rem;
+    /* height: 100%; */
+    /* display: flex; */
+    overflow-y: scroll;
+    /* overflow-x: auto; */
+    overflow-x: hidden;
+}
+
+.ant-tabs .ant-tabs-left-bar {
+    width: 25%;
+}
+
+.ant-tabs .ant-tabs-left-bar .ant-tabs-nav-container.ant-tabs-nav-container-scrolling {
+    height: 90%;
+}
+
+.ant-tabs-tab-active {
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    /* background: pink; */
+}
+
+.ant-tabs-tab {
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.ant-tabs .ant-tabs-left-bar .ant-tabs-tab {
+    text-align: center !important;
+    padding: 8px 18px !important;
 }
