--- a/WoTu/wotu/src/css/mine.css
+++ b/WoTu/wotu/src/css/mine.css
@@ -25,7 +25,7 @@
     line-height: .1rem;
     align-self:center;
 }
-.pic img{
+.Pic img{
     width: 1.08rem;
     height: 1.08rem;
     border-radius: 50%;
