--- a/WoTu/wotu/src/css/SettingWall.css
+++ b/WoTu/wotu/src/css/SettingWall.css
@@ -116,8 +116,8 @@
 .set-main-top-img-one,
 .set-main-top-img-one1,
 .set-main-top-img-two {
-    width: 3.34rem;
-    height: 4.55rem;
+    width: 48%;
+    height: 71%;
     float: left;
     background: white;
     padding: 0.1rem 0 0 0.11rem;
@@ -125,15 +125,15 @@
 
 .set-main-top-img-one,
 .set-main-top-img-one1 {
-    margin-left: 0.1rem;
+    margin-left: 1.5%;
     margin-bottom: 0.2rem;
 }
 
 .set-main-top-img-one img,
 .set-main-top-img-one1 img,
 .set-main-top-img-two img {
-    width: 3.1rem;
-    height: 3.8rem;
+    width: 100%;
+    height: 100%;
 }
 
 .set-main-top-img-one p,
