分类页面渲染版本1.0

--- a/WoTu/wotu/src/css/list.css
+++ b/WoTu/wotu/src/css/list.css
@@ -103,6 +103,10 @@
     overflow-x: hidden;
 }
 
+.list_tab::-webkit-scrollbar {
+    display: none
+}
+
 .ant-tabs .ant-tabs-left-bar {
     width: 25%;
 }
