--- a/WoTu/wotu/src/css/goods.css
+++ b/WoTu/wotu/src/css/goods.css
@@ -91,3 +91,47 @@ a {
     height: 12rem;
     background: #f6f6f6;
 }
+
+.ant-tabs-nav .ant-tabs-tab {
+    margin-left: 0.2rem !important;
+    /* background: red !important; */
+    /* margin-left: 2% !important; */
+    /* width: 25%; */
+}
+
+.ant-tabs-nav-wrap {
+    background: #fff;
+}
+
+
+/* 分类下面的卡片 */
+
+.cart_c2 {
+    width: 100% !important;
+    height: 10rem !important;
+    /* background-color: aqua; */
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.cart_c2::-webkit-scrollbar {
+    display: none
+}
+
+.ant-card-cover img {
+    width: 100%;
+    height: 3.46rem;
+}
+
+.ant-card-meta-title {
+    height: 100%;
+    /* padding-top: 0.3rem; */
+    overflow: hidden;
+    color: rgba(0, 0, 0, 0.85);
+    font-weight: 500;
+    font-size: 20px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    /* margin-left: 31%; */
+    /* background: red; */
+}
