--- a/WoTu/wotu/src/App.css
+++ b/WoTu/wotu/src/App.css
@@ -1,8 +1,10 @@
 body {
-  font-size: 100px;
+    font-size: 100px;
 }
-body,html{
-  height: 100%;
+
+body,
+html {
+    height: 100%;
 }
 
 html,
@@ -74,31 +76,56 @@ time,
 mark,
 audio,
 video {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
-ul, li, ol {
-  list-style: none;
+ul,
+li,
+ol {
+    list-style: none;
 }
 
 img {
-  display: block;
+    display: block;
 }
 
 .ant-menu {
-  display: flex;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-  /* justify-content: center; */
-  /* align-items: center; */
+    display: flex;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    /* justify-content: center; */
+    /* align-items: center; */
 }
-.ant-menu-item{
-  height: 1rem;
-}
+
 .ant-menu-item {
-  width: 25%;
+    height: 1rem;
+}
+
+.ant-menu-item {
+    width: 25%;
+}
+
+.ant-menu-horizontal>.ant-menu-item:hover,
+.ant-menu-horizontal>.ant-menu-submenu:hover,
+.ant-menu-horizontal>.ant-menu-item-active,
+.ant-menu-horizontal>.ant-menu-submenu-active,
+.ant-menu-horizontal>.ant-menu-item-open,
+.ant-menu-horizontal>.ant-menu-submenu-open,
+.ant-menu-horizontal>.ant-menu-item-selected,
+.ant-menu-horizontal>.ant-menu-submenu-selected {
+    color: #777 !important;
+    border-bottom: none !important;
+}
+
+.ant-menu-horizontal>.ant-menu-item,
+.ant-menu-horizontal>.ant-menu-submenu {
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    vertical-align: bottom;
+    border-bottom: none !important;
 }
